update file css

--- a/index.html
+++ b/index.html
@@ -212,6 +212,49 @@
            </ul>
           
        </div></section>
+
+
+
+<section class="custom">
+    <div class="container-custom">
+        <h2 class="custom-second">Customers</h2>
+        <ul class="custom-company list">
+            <li class="custom-item"><a href="" class="custom-link link">
+                <svg class="custom-icons" widht="104"  height="56">
+                    <use href="./image/symbol-defs.svg#icon-Logo"></use>
+                </svg>
+            </a></li>
+            <li class="custom-item"><a href="" class="custom-link link">
+                <svg class="custom-icons" widht="104" height="56">
+                    <use href="./image/symbol-defs.svg#icon-Logocom"></use>
+                </svg>
+            </a></li>
+            <li class="custom-item"><a href="" class="custom-link link">
+                <svg class="custom-icons" widht="104" height="56">
+                    <use href="./image/symbol-defs.svg#icon-Logocomp"></use>
+                </svg>
+            </a></li>
+            <li class="custom-item"><a href="" class="custom-link link">
+                <svg class="custom-icons" widht="104" height="56">
+                    <use href="./image/symbol-defs.svg#icon-foster"></use>
+                </svg>
+            </a></li>
+            <li class="custom-item"><a href="" class="custom-link link">
+                <svg class="custom-icons" widht="104" height="56"> 
+                    <use href="./image/symbol-defs.svg#icon-brand"></use>
+                </svg>
+            </a></li>
+            <li class="custom-item"><a href="" class="custom-link link">
+                <svg class="custom-icons" widht="104" height="56"> 
+                    <use href="./image/symbol-defs.svg#icon-company"></use>
+                </svg>
+            </a></li>
+        </ul>
+    </div>
+</section>
+
+
+
   </main>
 
   <!--footer main page-->
