--- a/portfolio.html
+++ b/portfolio.html
@@ -71,7 +71,7 @@
                         <h3 class="type-portfolio-title">Banking App Interface Concept</h3>
                         <p class="type-portfolio-text">App</p>
                    </div></li>
-                <li class="type-portfolio"><img src="./image/portfolio5/image5.jpeg" alt="gallery-portfolio" width="360" height="300">
+                <li class="type-portfolio"><img src="./image/portfolio5/img.jpeg" alt="gallery-portfolio" width="360" height="300">
                     <div class="type-text">
                         <h3 class="type-portfolio-title">Cashless Payment</h3>
                         <p class="type-portfolio-text">Marketing</p>
