update file html

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                         <ul class="sohl-description-list list">
                             <li class="description-sohl-two"><a href="" class="sohl-title-link link">
                              <svg class="sohl-title-icon" widht="16px" height="16px">
-                                <use href="./image/symbol-defs.svg#icon-instagram-ford"></use>
+                                <use href="./image/symbol-defs.svg#icon-instagram-2"></use>
                              </svg>   
                             </a></li>
                             <li class="description-sohl-two"><a href="" class="sohl-title-link link">
@@ -257,7 +257,7 @@
 
 
 <section class="custom">
-    <div class="container-custom">
+    <div class="container">
         <h2 class="custom-second">Customers</h2>
         <ul class="custom-company list">
             <li class="custom-item"><a href="" class="custom-link link">
@@ -325,23 +325,23 @@
     <p class="description-text-three">Social media</p>
             <ul class="solt-description-list list">
                 <li class="description-solt-two"><a href="" class="solt-title-link link">
-                 <svg class="solt-title-icon" width="16px" height="16px">
-                    <use href="./image/symbol-defs.svg#icon-instagram-2"></use>
+                 <svg class="solt-title-icon" width="24px" height="24px">
+                    <use href="./image/symbol-defs.svg#icon-instagramfooter"></use>
                  </svg>   
                 </a></li>
                 <li class="description-solt-two"><a href="" class="solt-title-link link">
-                    <svg class="solt-title-icon" width="16px" height="13px">
+                    <svg class="solt-title-icon" width="24px" height="19px">
                         <use href="./image/symbol-defs.svg#icon-twitter-1"></use>
                      </svg>    
                 </a></li>
                 <li class="description-solt-two"><a href="" class="solt-title-link link">
-                    <svg class="solt-title-icon" width="8px" height="16px">
-                        <use href="./image/symbol-defs.svg#icon-facebook-1"></use>
+                    <svg class="solt-title-icon" width="12px" height="24px">
+                        <use href="./image/symbol-defs.svg#icon-Vectorfacebookf-1"></use>
                      </svg>    
                 </a></li>
                 <li class="description-solt-two"><a href="" class="solt-title-link link">
-                    <svg class="solt-title-icon" width="8px" height="16px">
-                        <use href="./image/symbol-defs.svg#icon-linkedin-1"></use>
+                    <svg class="solt-title-icon" width="24px" height="24px">
+                        <use href="./image/symbol-defs.svg#icon-linkedinfooter"></use>
                      </svg>
                 </a></li>
             </ul>
