--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
 
             
             <nav class="navigation">
-                <ul class="link list"><li><a class="studio link" href="">Studio</a></li>
+                <ul class="link list"><li><a class="studio link" href="./index.html">Studio</a></li>
                     <li><a class="portfolio link" href="">Portfolio</a></li>
                     <li><a class="contacts link" href="">Contacts</a></li></ul>
         
